[*] Enregistre le nouveaux tests + ameliore le template.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -25,7 +25,10 @@
     "\n",
     "ENV[\"GRB_LICENSE_FILE\"] = \"gurobi.lic\"\n",
     "include(joinpath(\"src\", \"utils.jl\"));\n",
-    "include(joinpath(\"src\", \"dual_solve.jl\"));"
+    "include(joinpath(\"src\", \"dual_solve.jl\"));\n",
+    "include(joinpath(\"src\", \"heuristics.jl\"));\n",
+    "include(joinpath(\"src\", \"cutting_planes.jl\"));\n",
+    "include(joinpath(\"src\", \"testing.jl\"));"
    ]
   },
   {
@@ -34,12 +37,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# file = joinpath(\"data\", \"20_USA-road-d.BAY.gr\")\n",
-    "file = joinpath(\"data\", \"100_USA-road-d.BAY.gr\")\n",
-    "infos = open(\n",
-    "    readInstance,\n",
-    "    file,\n",
-    ");"
+    "dual = completeModelWrapper(dualSolve, time_budget=20 * 60.0)\n",
+    "\n",
+    "time_budget = nSquaredTimeWithMax(maxtime=10 * 60.0, mintime=10.0)\n",
+    "heuristique = heurWrapper(time_budget_fun=time_budget)\n",
+    "\n",
+    "cutting_planes = completeModelWrapper(plans_coupants, time_budget=20 * 60.0);"
    ]
   },
   {
@@ -48,7 +51,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph = graphFromData(infos);"
+    "dual_file = joinpath(\"data\", \"results\", \"dual_1.json\")\n",
+    "\n",
+    "heuristique_file = joinpath(\"data\", \"results\", \"heuristique_1.json\")\n",
+    "\n",
+    "cutting_plane_file = joinpath(\"data\", \"results\", \"cutting_plane_3.json\")\n",
+    "\n",
+    "instance_dir = joinpath(\"data\", \"instances\");"
    ]
   },
   {
@@ -57,9 +66,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = dualSolve(graph; timelimit=time() + 60.0)\n",
-    "println(mkPath(res.a))\n",
-    "println(res.obj_value)"
+    "testMethod(\n",
+    "    method=dual;\n",
+    "    method_name=\"Dualisation\",\n",
+    "    save=dual_file,\n",
+    "    instance_dir=instance_dir,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testMethod(\n",
+    "    method=heuristique;\n",
+    "    method_name=\"Heuristique\",\n",
+    "    save=heuristique_file,\n",
+    "    instance_dir=instance_dir,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testMethod(\n",
+    "    method=cutting_planes;\n",
+    "    method_name=\"Plans coupants\",\n",
+    "    save=cutting_plane_file,\n",
+    "    instance_dir=instance_dir,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dual_res = joinpath(\"data\", \"results\", \"dual_1.json\")\n",
+    "heur_res = joinpath(\"data\", \"results\", \"heuristique_1.json\");\n",
+    "cp_res = joinpath(\"data\", \"results\", \"cutting_plane_3.json\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processed = processResultsForTable(\n",
+    "    [dual_res, heur_res, cp_res];\n",
+    "    not_robust_method=\"None\",\n",
+    ")\n",
+    "\n",
+    "open(\n",
+    "    fd -> writeTable(\n",
+    "        [\"Dualisation\", \"Heuristique\", \"Plans coupants\"];\n",
+    "        results=processed,\n",
+    "        template_file=joinpath(\"template\", \"table.tex\"),\n",
+    "        output=fd,\n",
+    "    ),\n",
+    "    joinpath(\"out\", \"table_2.tex\"),\n",
+    "    write=true,\n",
+    ")"
    ]
   }
  ],
