--- a/template/table.tex
+++ b/template/table.tex
@@ -9,9 +9,15 @@
 
 \usepackage{subcaption}
 \usepackage{float}
+\usepackage{geometry}
 
 \begin{document}
 
+\newgeometry{left=1mm}
+\flushleft
+
 %insert table%
+
+\restoregeometry
 
 \end{document}
