[-] Annule les changements sur sandbox.ipynb.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "ENV[\"GRB_LICENSE_FILE\"] = \"gurobi.lic\"\n",
     "include(joinpath(\"src\", \"utils.jl\"));\n",
-    "include(joinpath(\"src\", \"branch_and_cut.jl\"));"
+    "include(joinpath(\"src\", \"dual_solve.jl\"));"
    ]
   },
   {
@@ -34,10 +34,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# file = joinpath(\"data\", \"20_USA-road-d.BAY.gr\")\n",
+    "file = joinpath(\"data\", \"100_USA-road-d.BAY.gr\")\n",
     "infos = open(\n",
     "    readInstance,\n",
-    "    joinpath(\"data\", \"instances\", \"20_USA-road-d.BAY.gr\"),\n",
-    ");\n",
+    "    file,\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "graph = graphFromData(infos);"
    ]
   },
@@ -47,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = branch_and_cut(graph; timelimit=time() + 60.0)\n",
+    "res = dualSolve(graph; timelimit=time() + 60.0)\n",
     "println(mkPath(res.a))\n",
     "println(res.obj_value)"
    ]
