[+] Diagrammes de performance, corrige des bugs.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -25,10 +25,14 @@
     "\n",
     "ENV[\"GRB_LICENSE_FILE\"] = \"gurobi.lic\"\n",
     "include(joinpath(\"src\", \"utils.jl\"));\n",
+    "include(joinpath(\"src\", \"resolution.jl\"))\n",
+    "include(joinpath(\"src\", \"cutting_planes.jl\"));\n",
+    "include(joinpath(\"src\", \"branch_and_cut.jl\"));\n",
     "include(joinpath(\"src\", \"dual_solve.jl\"));\n",
     "include(joinpath(\"src\", \"heuristics.jl\"));\n",
-    "include(joinpath(\"src\", \"cutting_planes.jl\"));\n",
-    "include(joinpath(\"src\", \"testing.jl\"));"
+    "include(joinpath(\"src\", \"testing.jl\"));\n",
+    "include(joinpath(\"src\", \"latex.jl\"));\n",
+    "include(joinpath(\"src\", \"graphics.jl\"));"
    ]
   },
   {
@@ -37,12 +41,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "statique = completeModelWrapper(resolution, time_budget=20 * 60.0)\n",
+    "\n",
     "dual = completeModelWrapper(dualSolve, time_budget=20 * 60.0)\n",
     "\n",
     "time_budget = nSquaredTimeWithMax(maxtime=10 * 60.0, mintime=10.0)\n",
     "heuristique = heurWrapper(time_budget_fun=time_budget)\n",
     "\n",
-    "cutting_planes = completeModelWrapper(plans_coupants, time_budget=20 * 60.0);"
+    "cutting_planes = completeModelWrapper(plans_coupants, time_budget=20 * 60.0);\n",
+    "\n",
+    "b_and_c = completeModelWrapper(branch_and_cut, time_budget=20 * 60.0);"
    ]
   },
   {
@@ -51,11 +59,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "statique_file = joinpath(\"data\", \"results\", \"statique_1.json\")\n",
+    "\n",
     "dual_file = joinpath(\"data\", \"results\", \"dual_1.json\")\n",
     "\n",
     "heuristique_file = joinpath(\"data\", \"results\", \"heuristique_1.json\")\n",
     "\n",
     "cutting_plane_file = joinpath(\"data\", \"results\", \"cutting_plane_3.json\")\n",
+    "\n",
+    "branch_and_cut_file = joinpath(\"data\", \"results\", \"branch_and_cut_1.json\")\n",
     "\n",
     "instance_dir = joinpath(\"data\", \"instances\");"
    ]
@@ -108,9 +120,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dual_res = joinpath(\"data\", \"results\", \"dual_1.json\")\n",
-    "heur_res = joinpath(\"data\", \"results\", \"heuristique_1.json\");\n",
-    "cp_res = joinpath(\"data\", \"results\", \"cutting_plane_3.json\");"
+    "testMethod(\n",
+    "    method=b_and_c;\n",
+    "    method_name=\"Branch & Cut\",\n",
+    "    save=branch_and_cut_file,\n",
+    "    instance_dir=instance_dir,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testMethod(\n",
+    "    method=statique;\n",
+    "    method_name=\"Statique\",\n",
+    "    save=statique_file,\n",
+    "    instance_dir=instance_dir,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_files = [\n",
+    "    statique_file,\n",
+    "    dual_file,\n",
+    "    heuristique_file,\n",
+    "    cutting_plane_file,\n",
+    "    # branch_and_cut_file,\n",
+    "];"
    ]
   },
   {
@@ -120,19 +164,38 @@
    "outputs": [],
    "source": [
     "processed = processResultsForTable(\n",
-    "    [dual_res, heur_res, cp_res];\n",
-    "    not_robust_method=\"None\",\n",
+    "    res_files;\n",
+    "    not_robust_method=\"Statique\",\n",
     ")\n",
+    "output_file = joinpath(\"out\", \"table_3.tex\")\n",
     "\n",
     "open(\n",
     "    fd -> writeTable(\n",
-    "        [\"Dualisation\", \"Heuristique\", \"Plans coupants\"];\n",
+    "        [\"Dualisation\", \"Plans coupants\", \"Heuristique\"];\n",
     "        results=processed,\n",
     "        template_file=joinpath(\"template\", \"table.tex\"),\n",
     "        output=fd,\n",
     "    ),\n",
-    "    joinpath(\"out\", \"table_2.tex\"),\n",
+    "    output_file,\n",
     "    write=true,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graphic_file = joinpath(\"out\", \"test.png\")\n",
+    "graphic_results = processResultsForPerfDiag(\n",
+    "    res_files;\n",
+    "    not_robust_method=\"Statique\",\n",
+    ")\n",
+    "savePerfDiag(\n",
+    "    graphic_results;\n",
+    "    until=5400.0,\n",
+    "    output=graphic_file,\n",
     ")"
    ]
   }
