[*] Repare plein de bugs.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "heuristique_file = joinpath(\"data\", \"results\", \"heuristique_1.json\")\n",
     "\n",
-    "cutting_plane_file = joinpath(\"data\", \"results\", \"cutting_plane_3.json\")\n",
+    "cutting_plane_file = joinpath(\"data\", \"results\", \"cutting_plane_4.json\")\n",
     "\n",
     "branch_and_cut_file = joinpath(\"data\", \"results\", \"branch_and_cut_1.json\")\n",
     "\n",
@@ -153,7 +153,7 @@
     "    dual_file,\n",
     "    heuristique_file,\n",
     "    cutting_plane_file,\n",
-    "    # branch_and_cut_file,\n",
+    "    branch_and_cut_file,\n",
     "];"
    ]
   },
@@ -167,11 +167,11 @@
     "    res_files;\n",
     "    not_robust_method=\"Statique\",\n",
     ")\n",
-    "output_file = joinpath(\"out\", \"table_3.tex\")\n",
+    "output_file = joinpath(\"out\", \"table_4.tex\")\n",
     "\n",
     "open(\n",
     "    fd -> writeTable(\n",
-    "        [\"Dualisation\", \"Plans coupants\", \"Heuristique\"];\n",
+    "        [\"Dualisation\", \"Plans coupants\", \"Branch & Cut\", \"Heuristique\"];\n",
     "        results=processed,\n",
     "        template_file=joinpath(\"template\", \"table.tex\"),\n",
     "        output=fd,\n",
@@ -187,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graphic_file = joinpath(\"out\", \"test.png\")\n",
+    "graphic_file = joinpath(\"out\", \"perf_diag_1.png\")\n",
     "graphic_results = processResultsForPerfDiag(\n",
     "    res_files;\n",
     "    not_robust_method=\"Statique\",\n",
