[+] script pour ecrire les solutions.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -65,9 +65,9 @@
     "\n",
     "heuristique_file = joinpath(\"data\", \"results\", \"heuristique_1.json\")\n",
     "\n",
-    "cutting_plane_file = joinpath(\"data\", \"results\", \"cutting_plane_4.json\")\n",
+    "cutting_plane_file = joinpath(\"data\", \"results\", \"cutting_plane_5.json\")\n",
     "\n",
-    "branch_and_cut_file = joinpath(\"data\", \"results\", \"branch_and_cut_1.json\")\n",
+    "branch_and_cut_file = joinpath(\"data\", \"results\", \"branch_and_cut_2.json\")\n",
     "\n",
     "instance_dir = joinpath(\"data\", \"instances\");"
    ]
@@ -167,7 +167,7 @@
     "    res_files;\n",
     "    not_robust_method=\"Statique\",\n",
     ")\n",
-    "output_file = joinpath(\"out\", \"table_4.tex\")\n",
+    "output_file = joinpath(\"out\", \"table_6.tex\")\n",
     "\n",
     "open(\n",
     "    fd -> writeTable(\n",
@@ -187,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graphic_file = joinpath(\"out\", \"perf_diag_1.png\")\n",
+    "graphic_file = joinpath(\"out\", \"perf_diag_2.png\")\n",
     "graphic_results = processResultsForPerfDiag(\n",
     "    res_files;\n",
     "    not_robust_method=\"Statique\",\n",
@@ -196,6 +196,28 @@
     "    graphic_results;\n",
     "    until=5400.0,\n",
     "    output=graphic_file,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sols_file = joinpath(\"out\", \"solutions_1.tex\")\n",
+    "sols_res = processResultsForSolutions(\n",
+    "    res_files;\n",
+    "    not_robust_method=\"Statique\",\n",
+    ")\n",
+    "open(\n",
+    "    fd -> writeSolutions(\n",
+    "        sols_res;\n",
+    "        template_file=joinpath(\"template\", \"solutions.tex\"),\n",
+    "        output=fd,\n",
+    "    ),\n",
+    "    sols_file,\n",
+    "    write=true,\n",
     ")"
    ]
   }
