--- a/template/solutions.tex
+++ b/template/solutions.tex
@@ -3,24 +3,14 @@
 \usepackage[french]{babel}
 \usepackage[T1]{fontenc}
 
-\usepackage{multirow}
 \usepackage{amsmath}
 \usepackage{amssymb}
-
-\usepackage{subcaption}
-\usepackage{float}
-\usepackage{geometry}
+\usepackage{enumitem}
 
 \begin{document}
 
-\newgeometry{left=5mm, top=15mm}
 
-\begingroup
-\scriptsize
+%insert solutions%
 
-%insert table%
-
-\endgroup
-\restoregeometry
 
 \end{document}
