[*] Toy result files + instance files.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sandbox\n",
+    "## PROJ - notebook\n",
     "\n",
-    "Un  `.ipynb` pour tester des idées :)"
+    "Un  `.ipynb` pour faire tourner les tests et écrire les résultats."
    ]
   },
   {
@@ -36,21 +36,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "statique = completeModelWrapper(resolution, time_budget=20 * 60.0)\n",
-    "\n",
-    "dual = completeModelWrapper(dualSolve, time_budget=20 * 60.0)\n",
-    "\n",
-    "time_budget = nSquaredTimeWithMax(maxtime=10 * 60.0, mintime=10.0)\n",
-    "heuristique = heurWrapper(time_budget_fun=time_budget)\n",
-    "\n",
-    "cutting_planes = completeModelWrapper(plans_coupants, time_budget=20 * 60.0);\n",
-    "\n",
-    "b_and_c = completeModelWrapper(branch_and_cut, time_budget=20 * 60.0);"
+    "Définit les méthodes à tester et les fichier dans lesquels mettre les outputs :"
    ]
   },
   {
@@ -59,17 +48,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "statique_file = joinpath(\"data\", \"results\", \"statique_1.json\")\n",
+    "statique = completeModelWrapper(resolution, time_budget=2 * 60.0)\n",
     "\n",
-    "dual_file = joinpath(\"data\", \"results\", \"dual_1.json\")\n",
+    "dual = completeModelWrapper(dualSolve, time_budget=2 * 60.0)\n",
     "\n",
-    "heuristique_file = joinpath(\"data\", \"results\", \"heuristique_1.json\")\n",
+    "time_budget = nSquaredTimeWithMax(maxtime=10 * 60.0, mintime=10.0)\n",
+    "heuristique = heurWrapper(time_budget_fun=time_budget)\n",
     "\n",
-    "cutting_plane_file = joinpath(\"data\", \"results\", \"cutting_plane_5.json\")\n",
+    "cutting_planes = completeModelWrapper(plans_coupants, time_budget=2 * 60.0);\n",
     "\n",
-    "branch_and_cut_file = joinpath(\"data\", \"results\", \"branch_and_cut_2.json\")\n",
+    "b_and_c = completeModelWrapper(branch_and_cut, time_budget=2 * 60.0);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statique_file = joinpath(\"demo_data\", \"results\", \"statique.json\")\n",
     "\n",
-    "instance_dir = joinpath(\"data\", \"instances\");"
+    "dual_file = joinpath(\"demo_data\", \"results\", \"dual.json\")\n",
+    "\n",
+    "heuristique_file = joinpath(\"demo_data\", \"results\", \"heuristique.json\")\n",
+    "\n",
+    "cutting_plane_file = joinpath(\"demo_data\", \"results\", \"cutting_plane.json\")\n",
+    "\n",
+    "branch_and_cut_file = joinpath(\"demo_data\", \"results\", \"branch_and_cut.json\")\n",
+    "\n",
+    "instance_dir = joinpath(\"demo_data\", \"instances\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tests des différentes méthodes :"
    ]
   },
   {
@@ -143,6 +157,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exploitation des tests (tableau de résultats, diagramme de performance, solutions + valeurs) :"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -167,7 +188,7 @@
     "    res_files;\n",
     "    not_robust_method=\"Statique\",\n",
     ")\n",
-    "output_file = joinpath(\"out\", \"table_6.tex\")\n",
+    "output_file = joinpath(\"demo_out\", \"demo_table.tex\")\n",
     "\n",
     "open(\n",
     "    fd -> writeTable(\n",
@@ -187,14 +208,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graphic_file = joinpath(\"out\", \"perf_diag_2.png\")\n",
+    "graphic_file = joinpath(\"demo_out\", \"demo_perf_diag.png\")\n",
     "graphic_results = processResultsForPerfDiag(\n",
     "    res_files;\n",
     "    not_robust_method=\"Statique\",\n",
     ")\n",
     "savePerfDiag(\n",
     "    graphic_results;\n",
-    "    until=5400.0,\n",
+    "    until=300.0,\n",
     "    output=graphic_file,\n",
     ")"
    ]
@@ -205,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sols_file = joinpath(\"out\", \"solutions_1.tex\")\n",
+    "sols_file = joinpath(\"demo_out\", \"demo_solutions.tex\")\n",
     "sols_res = processResultsForSolutions(\n",
     "    res_files;\n",
     "    not_robust_method=\"Statique\",\n",
