[*] Adapte le code pour CPLEX.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -21,9 +21,8 @@
     "using Graphs\n",
     "using MetaGraphsNext\n",
     "using JuMP\n",
-    "using Gurobi\n",
+    "using CPLEX\n",
     "\n",
-    "ENV[\"GRB_LICENSE_FILE\"] = \"gurobi.lic\"\n",
     "include(joinpath(\"src\", \"utils.jl\"));\n",
     "include(joinpath(\"src\", \"resolution.jl\"))\n",
     "include(joinpath(\"src\", \"cutting_planes.jl\"));\n",
